Finish FAQ's for ausp.ink.

--- a/auspink/faq/index.html
+++ b/auspink/faq/index.html
@@ -16,179 +16,158 @@ layout: default
     <div class="faq-toc" data-aos="fade-up">
         <h3>Quick Navigation</h3>
         <ul>
-            <li><a href="#general">✅ General</a></li>
-            <li><a href="#syncing">🔁 Syncing</a></li>
-            <li><a href="#payments">💳 Payments & Refunds</a></li>
-            <li><a href="#accounting">💼 Accounting & Tax</a></li>
-            <li><a href="#setup">🛠️ Setup & Support</a></li>
+            <li><a href="#getting-started">🚀 Getting Started</a></li>
+            <li>
+                <a href="#order-export">📦 Order Export & Shipping Labels</a>
+            </li>
+            <li><a href="#parcel-config">📐 Parcel Configuration</a></li>
+            <li><a href="#security-support">🔒 Security & Support</a></li>
         </ul>
     </div>
 
     <div class="legal-section" data-aos="fade-up">
         <p>
-            We know accounting is important to your business and we know x.ink
-            is not perfect. Hopefully this page will help you find some of the
-            answers you may have.
+            We know shipping is vital to your business, and ausp.ink is designed
+            to make Australia Post exports as simple as possible. This FAQ
+            should help you understand how our app can streamline your shipping
+            workflow.
         </p>
         <p>
-            If there's anything else we can help with, please
-            <a href="mailto:inkapps.tom@gmail.com">get in touch</a>.
+            If you have any other questions, please
+            <a href="mailto:support@ausp.ink">get in touch</a>.
         </p>
     </div>
 
     <div class="faq-section" data-aos="fade-up">
-        <h2 id="general">✅ General</h2>
+        <h2 id="getting-started">🚀 Getting Started</h2>
 
         <div class="faq-item">
-            <h3>What does the app do?</h3>
+            <h3>What is ausp.ink?</h3>
             <p>
-                Our app syncs your Shopify orders and transactions directly into
-                Xero — automatically and accurately. It creates Xero invoices,
-                applies payments, handles refunds, discounts, and covers all
-                common payment types.
+                ausp.ink is a Shopify app that lets you export orders in an
+                Australia Post-compatible format. It helps streamline the
+                process of generating shipping labels through MyPost Business or
+                eParcel.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>Who is this app for?</h3>
+            <h3>How do I access ausp.ink in Shopify?</h3>
             <p>
-                It's built for Australian Shopify store owners who want to keep
-                their accounting clean, simple, and automated with Xero.
+                You can access ausp.ink from the Shopify order list. Just select
+                one or more orders and choose "Export to Australia Post" from
+                the "More actions" menu.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>Do I need to be tech-savvy to use it?</h3>
+            <h3>Do I need an Australia Post account to use the app?</h3>
             <p>
-                Not at all! Setup takes just a few minutes, and we
-                <a href="/xink/getting-started">guide you through every step</a
-                >.
-            </p>
-        </div>
-    </div>
-
-    <div class="faq-section" data-aos="fade-up">
-        <h2 id="syncing">🔁 Syncing</h2>
-
-        <div class="faq-item">
-            <h3>How often does the app sync?</h3>
-            <p>
-                The app syncs in near real-time. Your Shopify orders and
-                transactions show up in Xero shortly after they're processed.
+                Yes, you'll need a MyPost Business or eParcel account to upload
+                the exported file and generate shipping labels.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>Can I sync past (historical) orders?</h3>
+            <h3>Does the app work for international orders?</h3>
             <p>
-                At the moment, we only sync new orders from the time you install
-                the app onwards. Syncing historical orders is a feature we're
-                working on.
-            </p>
-        </div>
-
-        <div class="faq-item">
-            <h3>Can I choose what gets synced?</h3>
-            <p>
-                Yes. You can configure which transaction types are synced based
-                on the payment method.
+                ausp.ink is currently focused on domestic shipping within
+                Australia. International support may be added in the future.
             </p>
         </div>
     </div>
 
     <div class="faq-section" data-aos="fade-up">
-        <h2 id="payments">💳 Payments, Refunds & Discounts</h2>
+        <h2 id="order-export">📦 Order Export & Shipping Labels</h2>
 
         <div class="faq-item">
-            <h3>What payment types are supported?</h3>
+            <h3>What format does ausp.ink export to?</h3>
             <p>
-                We support all major gateways — Shopify Payments, PayPal,
-                Stripe, Afterpay, and more. You can map each to specific Xero
-                accounts.
+                The app exports orders to a CSV file that's compatible with both
+                MyPost Business and eParcel systems.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>How are refunds handled?</h3>
+            <h3>Can I export multiple orders at once?</h3>
             <p>
-                Refunds processed in Shopify are automatically reflected in Xero
-                as invoice adjustments.
+                Yes, ausp.ink supports bulk exports so you can save time and
+                handle high-volume shipments efficiently.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>Do discounts sync correctly?</h3>
+            <h3>Can I export fulfilled orders?</h3>
             <p>
-                Yes. Whether it's a discount on an item or the entire order,
-                it's all accounted for in Xero.
-            </p>
-        </div>
-    </div>
-
-    <div class="faq-section" data-aos="fade-up">
-        <h2 id="accounting">💼 Accounting & Tax</h2>
-
-        <div class="faq-item">
-            <h3>Can I map sales to different Xero accounts?</h3>
-            <p>
-                Definitely. You can map sales, taxes, shipping, and payments to
-                your preferred Xero accounts.
+                The app is designed for unfulfilled or partially fulfilled
+                orders, as fulfilled orders typically don't require new shipping
+                labels.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>Does it support GST and Australian tax settings?</h3>
+            <h3>Does the app generate the shipping labels for me?</h3>
             <p>
-                Yes — we're built with Australian tax compliance in mind. GST is
-                synced properly whether your prices are tax-inclusive or
-                exclusive.
-            </p>
-        </div>
-
-        <div class="faq-item">
-            <h3>Do you support multi-currency?</h3>
-            <p>
-                Currently, we support AUD as the primary currency. Other
-                currencies are handled through Shopify and can be converted to
-                AUD before syncing to Xero.
+                Not directly. ausp.ink prepares an import-ready file that you
+                upload to your Australia Post account to generate the labels.
             </p>
         </div>
     </div>
 
     <div class="faq-section" data-aos="fade-up">
-        <h2 id="setup">🛠️ Setup & Support</h2>
+        <h2 id="parcel-config">📐 Parcel Configuration</h2>
 
         <div class="faq-item">
-            <h3>Is it easy to set up?</h3>
+            <h3>Can I customise parcel details during export?</h3>
             <p>
-                Very. Connect your Shopify store and Xero account, adjust a few
-                settings, and you're good to go.
+                Yes, you can adjust size, weight, and shipping preferences for
+                each order before export.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>What kind of support do you offer?</h3>
+            <h3>What are custom parcels, and how do they work?</h3>
             <p>
-                Friendly
-                <a href="mailto:inkapps.tom@gmail.com">email support</a> from
-                people who understand both Shopify and Xero. We're here to help
-                if you get stuck.
+                Custom parcels let you predefine commonly used parcel types
+                (e.g., "Standard Box", "Express Satchel"). These can be reused
+                during export for consistency and speed.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>Do you offer a free trial?</h3>
+            <h3>Can I create and manage multiple custom parcel types?</h3>
             <p>
-                Yes — there's a 90 day free trial so you can test the app before
-                subscribing.
+                Absolutely! You can define as many parcel types as your business
+                needs and apply them during the export process.
+            </p>
+        </div>
+    </div>
+
+    <div class="faq-section" data-aos="fade-up">
+        <h2 id="security-support">🔒 Security & Support</h2>
+
+        <div class="faq-item">
+            <h3>Is my data secure when using ausp.ink?</h3>
+            <p>
+                Yes, data is handled securely and stays within your Shopify
+                store and browser. We don't send data to external servers.
             </p>
         </div>
 
         <div class="faq-item">
-            <h3>What happens if I uninstall the app?</h3>
+            <h3>What if something goes wrong with my export file?</h3>
             <p>
-                Syncing stops immediately, but anything already pushed to Xero
-                remains in your account.
+                You can reach out to our support team via the app interface. We
+                also provide documentation and troubleshooting guides to help
+                you resolve common issues.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Is there customer support available?</h3>
+            <p>
+                Yes — we're here to help. You can contact us through the app or
+                visit our support page for assistance.
             </p>
         </div>
     </div>
